sandbox/output
StringCalculatorTest.java:35: error: method add in class StringCalculator cannot be applied to given types;
        assertEquals(3, StringCalculator.add("//;\n1;2", parserWithCustomizedDelimiter));
                                        ^
  required: String
  found: String,StringCalculatorParser
  reason: actual and formal argument lists differ in length
1 error
